terraform/apps/auth/manifest/auth-frontend-http-route.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: ${PREFIX}-auth-frontend
  namespace: "${PREFIX}-auth"
spec:
  parentRefs:
    - name: ${PREFIX}-common-gateway
      namespace: "istio-system"
  hostnames:
    - "auth.${BASE_DOMAIN}"
  rules:
    - backendRefs:
        - name: anthaathi-auth-frontend
          port: 3000
